# CMakeCraft

./: .gitignore  README.md  check_install.bat  create_module.bat  generator.py  last_session.json
core/: app.py  config.py  engine.py  exceptions.py
templates/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
templates/.github/workflows/: ci.yml
templates/examples/: CMakeLists.txt  PROJECT_NAME_main.cpp
templates/inc/: PROJECT_NAME.h
templates/interface/: PROJECT_NAME_I.h
templates/script/: auto_run.ps1
templates/src/: PROJECT_NAME.cpp
templates/tests/: CMakeLists.txt  PROJECT_NAME_test.cpp
